--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "homepage": "https://avreliakotta/learning-lingo-app/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.9.0",
     "formik": "^2.4.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3",
