--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "firebase": "^10.9.0",
     "formik": "^2.4.5",
     "nanoid": "^4.0.2",
+    "path-browserify": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
