--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,11 @@ jobs:
           REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
           REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
           REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
+    - name: Debug Environment Variables
+        run: |
+    echo "API Key: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}"
+    echo "Auth Domain: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}"
+    # Добавьте другие переменные окружения для отладки здесь
+
 
 
